# final-project-robosoulz

./: README.md
docs/logs/week08/: local_setup_verification.txt
docs/setup_notes/: week08_setup.md
docs/setup_notes/week08/: week08_node_summary.md
docs/weekly_reports/: week08_report.md
install/: local_setup.sh  setup.sh
install/interfaces/share/interfaces/: package.sh
install/qbot_description/share/qbot_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/qbot_description/share/qbot_description/cmake/: qbot_descriptionConfig.cmake
install/qbot_description/share/qbot_description/config/: qbot_controllers.yaml
install/qbot_description/share/qbot_description/launch/: display.launch.py  gazebo_ros2_control.launch.py  simulation.launch.py
install/qbot_navigation/lib/qbot_navigation/: mapper_node  navigation_server  odom_node  qbot_controller
install/qbot_navigation/share/qbot_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/interfaces/: CMakeLists.txt
src/interfaces/action/: Navigation.action
src/interfaces/srv/: GetLastPositions.srv
src/qbot_description/: CMakeLists.txt
src/qbot_description/launch/: gazebo.launch.py
src/qbot_description/rviz/: qbot.rviz
src/qbot_navigation/: package.xml  setup.cfg  setup.py
src/qbot_navigation/config/: slam_toolbox_params.yaml
src/qbot_navigation/launch/: lab_06_gazebo_launch.py  lab_06_gznew_launch.py  lab_06_rviz_launch.py
src/qbot_navigation/qbot_navigation/: odom_node.py
(+7 files in other folders)
